[gd_scene load_steps=8 format=3 uid="uid://d3wlrofelpiyq"]

[ext_resource type="Script" uid="uid://cnjxv0y3rfj4k" path="res://scenes/franchise_mode/tilesets/tables_tilesets.gd" id="1_j2kr7"]
[ext_resource type="Texture2D" uid="uid://cfhbffviujjar" path="res://assets/borrowed_assets/objects/tables/tables-sheet.png" id="1_k01dy"]
[ext_resource type="Texture2D" uid="uid://closakliox61h" path="res://assets/borrowed_assets/objects/tables/table_covers-sheet.png" id="2_ftygw"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0xpmo"]
texture = ExtResource("2_ftygw")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
2:0/0 = 0
4:0/0 = 0
6:0/0 = 0
8:0/0 = 0
10:0/0 = 0
12:0/0 = 0
14:0/0 = 0
16:0/0 = 0
18:0/0 = 0
20:0/0 = 0
22:0/0 = 0
24:0/next_alternative_id = 2
24:0/0 = 0
25:0/next_alternative_id = 2
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
31:0/0 = 0
32:0/0 = 0
34:0/0 = 0
36:0/0 = 0
38:0/0 = 0
40:0/0 = 0
42:0/0 = 0
44:0/0 = 0
46:0/0 = 0
48:0/0 = 0
50:0/0 = 0
52:0/0 = 0
54:0/0 = 0
56:0/0 = 0
58:0/0 = 0
60:0/0 = 0
62:0/0 = 0
64:0/0 = 0
66:0/0 = 0
0:1/0 = 0
2:1/0 = 0
4:1/0 = 0
6:1/0 = 0
8:1/0 = 0
10:1/0 = 0
12:1/0 = 0
14:1/0 = 0
16:1/0 = 0
18:1/0 = 0
20:1/0 = 0
22:1/0 = 0
24:1/next_alternative_id = 2
24:1/0 = 0
25:1/next_alternative_id = 2
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
32:1/0 = 0
40:1/0 = 0
48:1/0 = 0
56:1/0 = 0
64:1/0 = 0
66:1/0 = 0
0:2/0 = 0
2:2/0 = 0
4:2/0 = 0
6:2/0 = 0
8:2/0 = 0
10:2/0 = 0
12:2/0 = 0
14:2/0 = 0
16:2/0 = 0
18:2/0 = 0
20:2/0 = 0
22:2/0 = 0

[sub_resource type="TileSet" id="TileSet_huger"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_0xpmo")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ryrgv"]
texture = ExtResource("1_k01dy")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
31:0/0 = 0
32:0/0 = 0
33:0/0 = 0
34:0/0 = 0
35:0/0 = 0
38:0/0 = 0
39:0/0 = 0
40:0/0 = 0
42:0/0 = 0
43:0/0 = 0
44:0/0 = 0
48:0/0 = 0
49:0/0 = 0
50:0/0 = 0
51:0/0 = 0
54:0/0 = 0
55:0/0 = 0
56:0/0 = 0
57:0/0 = 0
58:0/0 = 0
59:0/0 = 0
60:0/0 = 0
61:0/0 = 0
62:0/0 = 0
63:0/0 = 0
64:0/0 = 0
65:0/0 = 0
66:0/0 = 0
67:0/0 = 0
68:0/0 = 0
69:0/0 = 0
72:0/0 = 0
73:0/0 = 0
74:0/0 = 0
75:0/0 = 0
76:0/0 = 0
77:0/0 = 0
78:0/0 = 0
79:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
32:1/0 = 0
33:1/0 = 0
34:1/0 = 0
35:1/0 = 0
38:1/0 = 0
39:1/0 = 0
40:1/0 = 0
42:1/0 = 0
43:1/0 = 0
44:1/0 = 0
48:1/0 = 0
49:1/0 = 0
50:1/0 = 0
51:1/0 = 0
54:1/0 = 0
55:1/0 = 0
56:1/0 = 0
57:1/0 = 0
58:1/0 = 0
59:1/0 = 0
60:1/0 = 0
61:1/0 = 0
62:1/0 = 0
63:1/0 = 0
64:1/0 = 0
65:1/0 = 0
66:1/0 = 0
67:1/0 = 0
68:1/0 = 0
69:1/0 = 0
72:1/0 = 0
73:1/0 = 0
74:1/0 = 0
75:1/0 = 0
76:1/0 = 0
77:1/0 = 0
78:1/0 = 0
79:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
38:2/0 = 0
39:2/0 = 0
40:2/0 = 0

[sub_resource type="TileSet" id="TileSet_j2kr7"]
tile_size = Vector2i(32, 32)
sources/1 = SubResource("TileSetAtlasSource_ryrgv")

[node name="Tables" type="Node2D"]
script = ExtResource("1_j2kr7")

[node name="TableCovers" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_huger")

[node name="GHOST_TableCovers" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_huger")

[node name="Tables" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray(0, 0, 255, 255, 255, 255, 1, 0, 24, 0, 0, 0, 0, 0, 255, 255, 0, 0, 1, 0, 24, 0, 1, 0, 0, 0, 0, 0, 255, 255, 1, 0, 25, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 25, 0, 1, 0, 0, 0)
tile_set = SubResource("TileSet_j2kr7")

[node name="GHOST_Tables" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_j2kr7")
